--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ linters = mccabe,pycodestyle,pyflakes
 ignore = D203,C901
 skip = tests/*,.venv/*
 
-[pylama:pep8]
+[pylama:pycodestyle]
 max_line_length = 100
