Remove hard-coding of my username in settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "python.linting.enabled": true,
     "python.formatting.provider": "black",
-    "python.formatting.blackPath": "/Users/ktbyers/GIT/pynet-ons-oct22/.venv/bin/black",
+    "python.formatting.blackPath": "black",
     "python.linting.pycodestyleEnabled": true,
     "python.linting.pycodestylePath": "pycodestyle",
-    "python.linting.pycodestyleArgs": ["--max-line-length=100"],
+    "python.linting.pycodestyleArgs": [
+        "--max-line-length=100"
+    ],
     "editor.formatOnSave": true,
 }
