--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "--max-line-length=100"
     ],
     "editor.formatOnSave": true,
-    "python.terminal.executeInFileDir": true
+    "python.terminal.executeInFileDir": true,
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
 }
